Add Schema Refinable Functions.